--- a/docs/_pages/404.md
+++ b/docs/_pages/404.md
@@ -3,13 +3,12 @@ permalink: /404.html
 ---
 
 <script type="text/javascript">
-  const {location, location: {pathname}} = window
+  const {location: l, location: {pathname}} = window
   const index = pathname.lastIndexOf('/')
-  const search = location.search.slice(1)
+  const search = l.search.slice(1)
 
-  location.replace(
-    location.protocol + '//' + location.host + pathname.slice(0, index) + '?' +
-    pathname.slice(index) + (search[0] === '/' ? '' : '&') + search +
-    location.hash
+  l.replace(
+    l.protocol + '//' + l.host + pathname.slice(0, index) + '?' +
+    pathname.slice(index) + (search[0] === '/' ? '' : '&') + search + l.hash
   );
 </script>
