--- a/docs/_pages/404.md
+++ b/docs/_pages/404.md
@@ -9,6 +9,8 @@ permalink: /404.html
 
   l.replace(
     l.protocol + '//' + l.host + pathname.slice(0, index) + '?' +
-    pathname.slice(index) + (search[0] === '/' ? '' : '&') + search + l.hash
+    // pathname.slice(index) +  // `pathname` in search string
+    // ((search.length && search[0] !== '/') ? '&' : '') +  // concat `search`
+    search + l.hash
   );
 </script>
